--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,9 +18,36 @@ pipeline {
         }
 
         stage('SonarCloud Analysis') {
+            environment {
+                SCANNER_HOME = tool 'sonar-scanner' // Matches tool config in Jenkins
+            }
             steps {
-                withSonarQubeEnv('SonarCloud') {
-                    sh 'mvn sonar:sonar'
+                withSonarQubeEnv('sonarserver') {
+                    sh '''
+                        $SCANNER_HOME/bin/sonar-scanner \
+                        -Dsonar.organization=sonarproject456 \
+                        -Dsonar.projectName=jenkins \
+                        -Dsonar.projectKey=sonarproject456_jenkins789 \
+                        -Dsonar.sources=src \
+                        -Dsonar.java.binaries=target/classes \
+                        -Dsonar.host.url=https://sonarcloud.io
+                    '''
+                }
+            }
+        }
+
+        stage('Publish Sonar Report') {
+            steps {
+                echo 'Publishing SonarCloud report...'
+                withCredentials([string(credentialsId: 'sonar-token', variable: 'SONAR_TOKEN')]) {
+                    sh '''
+                        mvn clean verify sonar:sonar \
+                        -Dsonar.projectKey=sonarproject456_jenkins789 \
+                        -Dsonar.organization=sonarproject456 \
+                        -Dsonar.host.url=https://sonarcloud.io \
+                        -Dsonar.login=$SONAR_TOKEN \
+                        -Dsonar.qualitygate.wait=false
+                    '''
                 }
             }
         }
