--- a/jenkinsfile
+++ b/jenkinsfile
@@ -54,7 +54,10 @@ pipeline {
 
         stage('Build Docker Image') {
             steps {
-                sh 'docker build -t azconreg25.azurecr.io/spring-app:latest .'
+                echo 'Building Docker image...'
+                sh '''
+                    docker build -t azconreg25.azurecr.io/${ImageName}:${BUILD_TAG} -f .devcontainer/Dockerfile .
+                '''
             }
         }
 
