--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,77 +1,125 @@
 pipeline {
     agent any
 
+    tools {
+        maven 'maven' // Ensure this matches the Maven installation name in Jenkins
+    }
+
+    environment {
+        ImageName = 'spring-app'   // Your app image name
+        BUILD_TAG = "latest"
+    }
+
     stages {
-        stage('Git Checkout') {
+        stage('Checkout From Git') {
             steps {
                 git branch: 'main', url: 'https://github.com/4dhiv1/spring-petclinic.git'
             }
         }
 
-        stage('Maven Build') {
+        stage('Maven Validate') {
             steps {
                 sh 'mvn validate'
+            }
+        }
+
+        stage('Maven Compile') {
+            steps {
                 sh 'mvn compile'
+            }
+        }
+
+        stage('Maven Test') {
+            steps {
                 sh 'mvn test'
+            }
+        }
+
+        stage('Maven Package') {
+            steps {
                 sh 'mvn package'
             }
         }
 
-        // stage('SonarCloud Analysis') {
-        //     environment {
-        //         SCANNER_HOME = tool 'sonar-scanner' // Matches tool config in Jenkins
-        //     }
-        //     steps {
-        //         withSonarQubeEnv('sonarserver') {
-        //             sh '''
-        //                 $SCANNER_HOME/bin/sonar-scanner \
-        //                 -Dsonar.organization=sonarproject456 \
-        //                 -Dsonar.projectName=jenkins \
-        //                 -Dsonar.projectKey=sonarproject456_jenkins789 \
-        //                 -Dsonar.sources=src \
-        //                 -Dsonar.java.binaries=target/classes \
-        //                 -Dsonar.host.url=https://sonarcloud.io
-        //             '''
-        //         }
-        //     }
-        // }
+        stage('SonarCloud Analysis') {
+            environment {
+                SCANNER_HOME = tool 'sonar-scanner'
+            }
+            steps {
+                withSonarQubeEnv('sonarserver') {
+                    sh '''
+                        $SCANNER_HOME/bin/sonar-scanner \
+                        -Dsonar.organization=sonarproject456 \
+                        -Dsonar.projectName=jenkins \
+                        -Dsonar.projectKey=sonarproject456_jenkins789 \
+                        -Dsonar.sources=src \
+                        -Dsonar.java.binaries=target/classes \
+                        -Dsonar.host.url=https://sonarcloud.io
+                    '''
+                }
+            }
+        }
 
-        // stage('Publish Sonar Report') {
-        //     steps {
-        //         echo 'Publishing SonarCloud report...'
-        //         withCredentials([string(credentialsId: 'sonar-token', variable: 'SONAR_TOKEN')]) {
-        //             sh '''
-        //                 mvn clean verify sonar:sonar \
-        //                 -Dsonar.projectKey=sonarproject456_jenkins789 \
-        //                 -Dsonar.organization=sonarproject456 \
-        //                 -Dsonar.host.url=https://sonarcloud.io \
-        //                 -Dsonar.login=$SONAR_TOKEN \
-        //                 -Dsonar.qualitygate.wait=false
-        //             '''
-        //         }
-        //     }
-        // }
+        stage('Publish Sonar Report') {
+            steps {
+                withCredentials([string(credentialsId: 'sonarcloud-token', variable: 'SONAR_TOKEN')]) {
+                    sh '''
+                        mvn clean verify sonar:sonar \
+                        -Dsonar.projectKey=sonarproject456_jenkins789 \
+                        -Dsonar.organization=sonarproject456 \
+                        -Dsonar.host.url=https://sonarcloud.io \
+                        -Dsonar.login=$SONAR_TOKEN \
+                        -Dsonar.qualitygate.wait=false
+                    '''
+                }
+            }
+        }
 
         stage('Build Docker Image') {
             steps {
-                echo 'Building Docker image...'
                 sh '''
-                    docker build -t azconreg25.azurecr.io/${ImageName}:${BUILD_TAG} -f .devcontainer/Dockerfile .
+                    docker build -t ${ImageName}:${BUILD_TAG} -f .devcontainer/Dockerfile .
+                    docker tag ${ImageName}:${BUILD_TAG} azconreg25.azurecr.io/${ImageName}:${BUILD_TAG}
                 '''
             }
         }
 
-        stage('Push to ACR') {
+        stage('Trivy Scan') {
             steps {
-                sh 'docker login azconreg25.azurecr.io -u azuredocker -p Password@123'
-                sh 'docker push azconreg25.azurecr.io/spring-app:latest'
+                sh '''
+                    trivy image --format table --severity HIGH,CRITICAL \
+                        --output trivy-report.txt azconreg25.azurecr.io/${ImageName}:${BUILD_TAG}
+                '''
+            }
+            post {
+                always {
+                    archiveArtifacts artifacts: 'trivy-report.txt'
+                }
             }
         }
 
-        stage('Deploy to AKS') {
+        stage('Login to ACR and Push Image') {
             steps {
-                sh 'kubectl apply -f k8s/deployment.yaml'
-                sh 'kubectl apply -f k8s/service.yaml'
+                withCredentials([
+                    usernamePassword(credentialsId: 'e029c5e3-c2a4-4976-b820-f3d475ec27cd', usernameVariable: 'AZURE_USERNAME', passwordVariable: 'AZURE_PASSWORD'),
+                    string(credentialsId: 'azure-tenant', variable: 'TENANT_ID')
+                ]) {
+                    sh '''
+                        az login --service-principal -u "$AZURE_USERNAME" -p "$AZURE_PASSWORD" --tenant "$TENANT_ID"
+                        az acr login --name azconreg25
+                        docker push azconreg25.azurecr.io/${ImageName}:${BUILD_TAG}
+                    '''
+                }
+            }
+        }
+
+        stage('Deploy to Kubernetes') {
+            steps {
+                sh '''
+                    az aks get-credentials --resource-group bootcamp-1 --name aksclust25
+                    kubectl apply -f k8s/petclinic.yml
+                    kubectl get all
+                '''
             }
         }
     }
