--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,126 +1,119 @@
 pipeline {
-    agent any
-
+    agent any 
     tools {
-        maven 'Maven' // Make sure this matches your Jenkins Maven installation name
+        maven 'maven'
     }
-
     environment {
-        ImageName = 'spring-app'          // Docker image name
-        BUILD_TAG = "latest"              // Docker image tag
+        IMAGE_NAME  = "sprinbootapp"
+        IMAGE_TAG  = "latest"
+        ACR_NAME    = "azconreg25"
+        ACR_LOGIN_SERVER = "azconreg25.azurecr.io"
+        FULL_IMAGE_NAME = "${ACR_LOGIN_SERVER}/${IMAGE_NAME}:${IMAGE_TAG}"
+        TENANT_ID   = "573c6803-d356-4c52-be17-547f193cd7a5"
+        RESOURCE_GROUP = "demo-rg"
+        CLUSTER_NAME    = "demo-eks"
     }
-
     stages {
-        stage('Checkout From Git') {
+        stage('Checkout from Git') { 
             steps {
-                git branch: 'main', url: 'https://github.com/4dhiv1/spring-petclinic.git'
+               git branch: 'prod', url: 'https://github.com/bkrrajmali/morning-javaspringbootapp.git'
             }
         }
-
-        stage('Maven Validate') {
+        stage('Maven Validate') { 
             steps {
-                sh 'mvn validate'
+               sh 'mvn validate'
             }
         }
-
-        stage('Maven Compile') {
+        stage('Maven Compile') { 
             steps {
-                sh 'mvn compile'
+               sh 'mvn compile'
             }
         }
-
-        stage('Maven Test') {
-            steps {
-                sh 'mvn test'
+        stage('Sonar Analysis') { 
+            environment {
+                SCANNER_HOME = tool 'Sonar-scanner'
             }
-        }
-
-        stage('Maven Package') {
             steps {
-                sh 'mvn package'
-            }
-        }
-
-        // stage('SonarCloud Analysis') {
-        //     environment {
-        //         SCANNER_HOME = tool 'sonar-scanner' // Make sure this matches Jenkins tool config
-        //     }
-        //     steps {
-        //         withSonarQubeEnv('sonarserver') {
-        //             sh '''
-        //                 $SCANNER_HOME/bin/sonar-scanner \
-        //                 -Dsonar.organization=Adhithyaa \
-        //                 -Dsonar.projectName=petclinic-boot1 \
-        //                 -Dsonar.projectKey=4dhiv1_petclinic-boot1 \
-        //                 -Dsonar.sources=src \
-        //                 -Dsonar.java.binaries=target/classes \
-        //                 -Dsonar.host.url=https://sonarcloud.io
-        //             '''
-        //         }
-        //     }
-        // }
-
-        // stage('Publish Sonar Report') {
-        //     steps {
-        //         withCredentials([string(credentialsId: 'sonarcloud-token', variable: 'SONAR_TOKEN')]) {
-        //             sh '''
-        //                 mvn clean verify sonar:sonar \
-        //                 -Dsonar.projectKey=4dhiv1_petclinic-boot1 \
-        //                 -Dsonar.organization=Adhithyaa \
-        //                 -Dsonar.host.url=https://sonarcloud.io \
-        //                 -Dsonar.login=$SONAR_TOKEN \
-        //                 -Dsonar.qualitygate.wait=false
-        //             '''
-        //         }
-        //     }
-        // }
-
-        stage('Build Docker Image') {
-            steps {
-                sh '''
-                    docker build -t ${ImageName}:${BUILD_TAG} -f .devcontainer/Dockerfile .
-                    docker tag ${ImageName}:${BUILD_TAG} azconreg25.azurecr.io/${ImageName}:${BUILD_TAG}
-                '''
-            }
-        }
-
-        stage('Trivy Scan') {
-            steps {
-                sh '''
-                    trivy image --format table --severity HIGH,CRITICAL \
-                        --output trivy-report.txt azconreg25.azurecr.io/${ImageName}:${BUILD_TAG}
-                '''
-            }
-            post {
-                always {
-                    archiveArtifacts artifacts: 'trivy-report.txt'
-                }
-            }
-        }
-
-        stage('Login to ACR and Push Image') {
-            steps {
-                withCredentials([
-                    usernamePassword(credentialsId: 'e029c5e3-c2a4-4976-b820-f3d475ec27cd', usernameVariable: 'AZURE_USERNAME', passwordVariable: 'AZURE_PASSWORD'),
-                    string(credentialsId: 'azure-tenant', variable: 'TENANT_ID')
-                ]) {
+                withSonarQubeEnv('sonarserver'){
                     sh '''
-                        az login --service-principal -u "$AZURE_USERNAME" -p "$AZURE_PASSWORD" --tenant "$TENANT_ID"
-                        az acr login --name azconreg25
-                        docker push azconreg25.azurecr.io/${ImageName}:${BUILD_TAG}
+                    $SCANNER_HOME/bin/sonar-scanner \
+                    -Dsonar.organization=Adhithyaa \
+                    -Dsonar.projectName=petclinic-boot1 \
+                    -Dsonar.projectKey=4dhiv1_petclinic-boot1 \
+                    -Dsonar.java.binaries=.
                     '''
+                } 
+            }
+        }
+        stage('Maven Package') { 
+            steps {
+               sh 'mvn package'
+            }
+        }
+        stage('Sonar Quality Gate') {
+         steps {
+            timeout(time: 1, unit: 'MINUTES') {
+                waitForQualityGate abortPipeline: true, credentialsId: 'sonar'
+            }
+         }
+       }
+       stage('Docker Build'){
+        steps {
+            script {
+                echo "Docker Image Build"
+                docker.build("${IMAGE_NAME}:${IMAGE_TAG}")
+            }
+        }
+       }
+       stage ('Azure Login to ACR') {
+        steps {
+            withCredentials([usernamePassword(credentialsId: 'azure-acr-sp', usernameVariable: 'AZURE_USERNAME', passwordVariable: 'AZURE_PASSWORD' )]) {
+               script {
+                echo "Login to Azure" 
+                sh '''
+                az login --service-principal -u $AZURE_USERNAME -p $AZURE_PASSWORD --tenant $TENANT_ID
+                az acr login --name $ACR_NAME       
+                '''
                 }
             }
-        }
-
-        stage('Deploy to Kubernetes') {
-            steps {
+         }
+       }
+       stage ('Docker Push to ACR') {
+        steps {
+            script {
+                echo "Docker Image Push"
                 sh '''
-                    az aks get-credentials --resource-group bootcamp-1 --name aksclust25
-                    kubectl apply -f k8s/petclinic.yml
-                    kubectl get all
+                docker tag ${IMAGE_NAME}:${IMAGE_TAG} ${FULL_IMAGE_NAME}
+                docker push ${FULL_IMAGE_NAME}
                 '''
             }
-        }
-    }
-}
+         }
+       }
+//        stage ('Login to AKS Cluster') {
+//         steps {
+//             withCredentials([usernamePassword(credentialsId: 'azure-acr-sp', usernameVariable: 'AZURE_USERNAME', passwordVariable: 'AZURE_PASSWORD' )]) {
+//             script {
+//                 echo "Azure Login to AKS"
+//                 sh '''
+//                 az login --service-principal -u $AZURE_USERNAME -p $AZURE_PASSWORD --tenant $TENANT_ID
+//                 az aks get-credentials --resource-group $RESOURCE_GROUP   --name $CLUSTER_NAME --overwrite-existing
+//                 '''
+//              }
+//             }
+//           }
+//        }
+//        stage ('Deploy to AKS') {
+//         steps {
+//             withCredentials([usernamePassword(credentialsId: 'azure-acr-sp', usernameVariable: 'AZURE_USERNAME', passwordVariable: 'AZURE_PASSWORD' )]) {
+//             script {
+//                 echo "Azure Login to AKS"
+//                 sh '''
+//                 az login --service-principal -u $AZURE_USERNAME -p $AZURE_PASSWORD --tenant $TENANT_ID
+//                 kubectl apply -f k8s/sprinboot-deployment.yaml
+//                 '''
+//              }
+//             }
+//           }
+//        }
+//     }
+// }
