--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,32 +19,32 @@ pipeline {
                git branch: 'main', url: 'https://github.com/4dhiv1/spring-petclinic.git'
             }
         }
-        // stage('Maven Validate') { 
-        //     steps {
-        //        sh 'mvn validate'
-        //     }
-        // }
-        // stage('Maven Compile') { 
-        //     steps {
-        //        sh 'mvn compile'
-        //     }
-        // }
-        // stage('Sonar Analysis') { 
-        //     environment {
-        //         SCANNER_HOME = tool 'sonar-scanner'
-        //     }
-        //     steps {
-        //         withSonarQubeEnv('sonarserver'){
-        //             sh '''
-        //             $SCANNER_HOME/bin/sonar-scanner \
-        //             -Dsonar.organization=4dhiv1 \
-        //             -Dsonar.projectName=petclinic-boot1 \
-        //             -Dsonar.projectKey=4dhiv1_petclinic-boot1 \
-        //             -Dsonar.java.binaries=.
-        //             '''
-        //         } 
-        //     }
-        // }
+        stage('Maven Validate') { 
+            steps {
+               sh 'mvn validate'
+            }
+        }
+        stage('Maven Compile') { 
+            steps {
+               sh 'mvn compile'
+            }
+        }
+        stage('Sonar Analysis') { 
+            environment {
+                SCANNER_HOME = tool 'sonar-scanner'
+            }
+            steps {
+                withSonarQubeEnv('sonarserver'){
+                    sh '''
+                    $SCANNER_HOME/bin/sonar-scanner \
+                    -Dsonar.organization=4dhiv1 \
+                    -Dsonar.projectName=petclinic-boot1 \
+                    -Dsonar.projectKey=4dhiv1_petclinic-boot1 \
+                    -Dsonar.java.binaries=.
+                    '''
+                } 
+            }
+        }
         stage('Maven Package') { 
             steps {
                sh 'mvn package'
@@ -89,19 +89,19 @@ pipeline {
             }
          }
        }
-       stage ('Login to AKS Cluster') {
-        steps {
-            withCredentials([usernamePassword(credentialsId: 'azure-acr-sp', usernameVariable: 'AZURE_USERNAME', passwordVariable: 'AZURE_PASSWORD' )]) {
-            script {
-                echo "Azure Login to AKS"
-                sh '''
-                az login --service-principal -u $AZURE_USERNAME -p $AZURE_PASSWORD --tenant $TENANT_ID
-                az aks get-credentials --resource-group $RESOURCE_GROUP   --name $CLUSTER_NAME --overwrite-existing
-                '''
-             }
-            }
-          }
-       }
+    //    stage ('Login to AKS Cluster') {
+    //     steps {
+    //         withCredentials([usernamePassword(credentialsId: 'azure-acr-sp', usernameVariable: 'AZURE_USERNAME', passwordVariable: 'AZURE_PASSWORD' )]) {
+    //         script {
+    //             echo "Azure Login to AKS"
+    //             sh '''
+    //             az login --service-principal -u $AZURE_USERNAME -p $AZURE_PASSWORD --tenant $TENANT_ID
+    //             az aks get-credentials --resource-group $RESOURCE_GROUP   --name $CLUSTER_NAME --overwrite-existing
+    //             '''
+    //          }
+    //         }
+    //       }
+    //    }
 //        stage ('Deploy to AKS') {
 //         steps {
 //             withCredentials([usernamePassword(credentialsId: 'azure-acr-sp', usernameVariable: 'AZURE_USERNAME', passwordVariable: 'AZURE_PASSWORD' )]) {
