--- a/jenkinsfile
+++ b/jenkinsfile
@@ -102,6 +102,18 @@ pipeline {
             }
           }
        }
+       stage('Deploy to Kubernetes') {
+        steps {
+            script {
+                echo 'Deploying to Kubernetes...'
+                sh '''
+                az aks get-credentials --resource-group bootcamp-1 --name aksclust25
+                kubectl apply -f k8s/petclinic.yml
+                kubectl get all
+                '''
+                }
+            }
+        }
 //        stage ('Deploy to AKS') {
 //         steps {
 //             withCredentials([usernamePassword(credentialsId: 'azure-acr-sp', usernameVariable: 'AZURE_USERNAME', passwordVariable: 'AZURE_PASSWORD' )]) {
