--- a/k8s/petclinic.yml
+++ b/k8s/petclinic.yml
@@ -1,10 +1,74 @@
----
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: petclinic
+# spec:
+#   type: NodePort
+#   ports:
+#     - port: 80
+#       targetPort: 8080
+#   selector:
+#     app: petclinic
+
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: petclinic
+#   labels:
+#     app: petclinic
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: petclinic
+#   template:
+#     metadata:
+#       labels:
+#         app: petclinic
+#     spec:
+#       containers:
+#         - name: workload
+#           image: dsyer/petclinic
+#           env:
+#             - name: SPRING_PROFILES_ACTIVE
+#               value: postgres
+#             - name: SERVICE_BINDING_ROOT
+#               value: /bindings
+#             - name: SPRING_APPLICATION_JSON
+#               value: |
+#                 {
+#                   "management.endpoint.health.probes.add-additional-paths": true
+#                 }
+#           ports:
+#             - name: http
+#               containerPort: 8080
+#           livenessProbe:
+#             httpGet:
+#               path: /livez
+#               port: http
+#           readinessProbe:
+#             httpGet:
+#               path: /readyz
+#               port: http
+#           volumeMounts:
+#             - mountPath: /bindings/secret
+#               name: binding
+#               readOnly: true
+#       volumes:
+#         - name: binding
+#           projected:
+#             sources:
+#               - secret:
+#                   name: demo-db
+
 apiVersion: v1
 kind: Service
 metadata:
   name: petclinic
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 8080
@@ -12,6 +76,7 @@ spec:
     app: petclinic
 
 ---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,9 +93,11 @@ spec:
       labels:
         app: petclinic
     spec:
+      imagePullSecrets:
+        - name: acr-secret
       containers:
         - name: workload
-          image: dsyer/petclinic
+          image: <your-acr-name>.azurecr.io/sprinbootapp:latest
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: postgres
